infra/wallet.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wallet
  namespace: wallet
  annotations:
    kuma.io/sidecar-injection: enabled
    kuma.io/mesh: default
