infra/dynamo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamodb-depl
  namespace: wallet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dynamodb
  template:
    metadata:
      labels:
        app: dynamodb
    spec:
      containers:
        - name: dynamodb
          image: amazon/dynamodb-local:latest
          args:
            - '-jar'
            - 'DynamoDBLocal.jar'
            - '-sharedDb'
            - '-dbPath'
            - '.'
---
apiVersion: v1
kind: Service
metadata:
  name: dynamodb-srv
  namespace: wallet
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: dynamodb
  ports:
    - name: tcp-client
      protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamodb-admin-depl
  namespace: wallet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dynamodb-admin
  template:
    metadata:
      labels:
        app: dynamodb-admin
    spec:
      containers:
        - name: dynamodb-admin
          image: aaronshaf/dynamodb-admin
---
apiVersion: v1
kind: Service
metadata:
  name: dynamodb-admin-srv
  namespace: wallet
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: dynamodb-admin
  ports:
    - name: tcp-client
      protocol: TCP
      port: 8001
      targetPort: 8001
